fixed overflowing

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@ html {
   padding: 0;
   box-sizing: border-box;
   font-size: Ubuntu;
-  /* user-select: none; */
+  user-select: none;
 }
 
 .transitions {
